--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,9 @@
 #--
 albums:
    names: SELECT primaryKey, Name FROM SqAlbum WHERE ClassName= 'Album' AND albumGroup = 8192
-
+#
+# Find folders togetherwith albums in folders
+# select primaryKey,parent,siblingOrder,repAlbumKeyForLoading from SqAlbum
 # primaryKey is from names: SQL
    photos: "SELECT sqPhotoInfo FROM AlbumsPhotosJoin where sqAlbum = #{primaryKey} ORDER BY photosOrder"
 
