--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 *~
 .#*
 #*#
+.DS_Store
+wiphoto/js/albums.js
+wiphoto/js/photos.js
+Data
+Modified
+Originals
+iPhotoMain.db
+index.html
+install.zip
+wiphoto/js/#photos.js#
+
+
